# aragora

./: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: worktree-guard.sh  worktree-project-link.sh
.github/workflows/: aragora-gauntlet.yml  aragora-review-demo.yml  aragora-review-gate.yml  aragora-review.yml  autopilot-worktree-e2e.yml  backup-verification.yml  benchmark.yml  benchmarks.yml  branch-discipline.yml  build.yml  capability-gap.yml  connector-registry.yml  contract-drift-governance.yml  core-suites.yml  coverage.yml  deploy-canary.yml  deploy-docs.yml  deploy-ec2.yml  deploy-frontend.yml  deploy-lightsail.yml  deploy-multi-region.yml  deploy-secure.yml  docker.yml  docs-build.yml  e2e.yml  integration-gate.yml  integration.yml  lighthouse.yml  lint.yml  live-deploy-mode-gate.yml  load-tests.yml  main-required-checks-auto-revert.yml  merge-group-frontend-typecheck.yml  migration-tests.yml  monitor.yml  new-features.yml  nightly-execution-gate-adversarial.yml  nightly-full-matrix.yml  nightly-integration.yml  nomic-ci.yml  (+32 more)
aragora/: __init__.py  task_brief.py
aragora-debate/: CHANGELOG.md  README.md
aragora/agents/: cli_agents.py  fallback.py
aragora/approvals/: inbox.py
aragora/auth/: __init__.py  mfa_drift_monitor.py
aragora/blockchain/: receipt_anchor.py
aragora/channels/: debate_formatter.py  email_debate_formatter.py  slack_debate_formatter.py  teams_debate_formatter.py
aragora/cli/: demo.py  openclaw.py  parser.py
aragora/compliance/: eu_ai_act.py  evidence_bundle.py
aragora/config/: minimal.py  secrets.py
aragora/coordination/: __init__.py  bus.py  claims.py  registry.py  resolver.py
aragora/core/: __init__.py
aragora/debate/: README.md  __init__.py  arena_config.py  arena_initializer.py  codebase_context.py  consensus.py  distributed_events.py  execution_safety.py  orchestrator.py  orchestrator_init.py  orchestrator_runner.py  output_quality.py  post_debate_coordinator.py  prompt_assemblers.py  prompt_builder.py  protocol.py  quality_pipeline.py  repo_grounding.py  scenarios.py  taint.py  team_selector.py
aragora/events/: types.py
aragora/gauntlet/: receipt_models.py  receipt_store.py  result.py  runner.py  signing.py  types.py
aragora/harnesses/: adapter.py  base.py  claude_code.py
aragora/ideacloud/: __init__.py  core.py
aragora/inbox/: __init__.py  auto_approval.py  cli_review.py  debate_router.py  receipt_gated_executor.py  triage_runner.py  trust_wedge.py
aragora/insights/: flip_detector.py
aragora/integrations/: zapier.py
aragora/introspection/: types.py
aragora/live/: package-lock.json  package.json  playwright.config.ts  tailwind.config.js
aragora/marketplace/: service.py
aragora/mcp/: impl_config.py
aragora/nomic/: __init__.py  autonomous_orchestrator.py  cost_forecast.py  cycle_receipt.py  dev_coordination.py  evolution_audit.py  feedback_analyzer.py  gauntlet_gate.py  global_work_queue.py  hardened_orchestrator.py  improvement_queue.py  km_feedback_bridge.py  meta_planner.py  meta_planner_utils.py  pipeline_bridge.py  self_correction.py  worktree_watchdog.py
aragora/notifications/: delivery_log.py  providers.py  retry_queue.py  service.py
aragora/persistence/: db_config.py
aragora/pipeline/: autonomy.py  backbone_contracts.py  canonical_execution.py  canvas_workflow_sync.py  execution_bridge.py  executor.py  external_verifier.py  idea_to_execution.py  plan_store.py  receipt_gate.py  receipt_generator.py  risk_register.py  spec_extractor.py  unified_orchestrator.py  verification_plan.py
aragora/policy/: engine.py  risk.py  tools.py
aragora/privacy/: retention.py
aragora/pulse/: consensus.py
aragora/ranking/: elo.py
aragora/rbac/: README.md  audit.py
aragora/reasoning/: belief.py
aragora/rlm/: debate_adapter.py
aragora/routing/: __init__.py  cost_quality_optimizer.py  provider_config.py  provider_metrics.py  provider_router.py  session_circuit_breaker.py
aragora/security/: context_signing.py
aragora/server/: ARCHITECTURE.md  README.md  auth_checks.py  debate_controller.py  prometheus_nomic.py  prometheus_rlm.py
docs/: AGENT_ASSIGNMENTS.md  ARAGORA_BUSINESS_SUMMARY.md  CANONICAL_GOALS.md  CAPABILITY_MATRIX.md  CI_LANES.md  CLI_REFERENCE.md  COMMERCIAL_OVERVIEW.md  COMPARISON_MATRIX.md  COORDINATION.md  ENTERPRISE_FEATURES.md  EU_AI_ACT_COMPLIANCE.md  EXTENDED_README.md  FEATURE_DISCOVERY.md  FEATURE_GAP_LIST.md  FOCUS.md  GA_CHECKLIST.md  HONEST_ASSESSMENT.md  INDEX.md  LANDING_PAGE.md  OMNIVOROUS_ROADMAP.md  PACKAGING.md  PRICING.md  PRICING_PAGE.md  QUICKSTART_CLI.md  QUICKSTART_DEVELOPER.md  README.md  SDK_QUICKSTART.md  SELF_HOSTING.md  START_HERE.md  STATUS.md  STRANDED_FEATURES_AUDIT.md  STRATEGIC_ANALYSIS.md  USE_CASES.md  WHY_ARAGORA.md  quickstart.md
docs-site/: package-lock.json
examples/: 01_basic_debate.py  02_compliance_check.py
scripts/: auto_revert_main_required_failures.py  check_execution_gate_defaults.py  check_execution_gate_policy_control.py  check_prometheus_rules.py  check_self_host_compose.py  check_self_host_runtime.py  check_workflow_pip_install_policy.py  ci_core_suites.sh  ci_release_readiness.sh  classification_scan.py  claude-wt  codex_session.sh  codex_worktree_autopilot.py  demo_compliance.sh  dogfood_backbone_profile.py  fix_setup_python_fallback.py  generate_capability_matrix.py  generate_essay_summaries.py  gmail_oauth_setup.py  liftmode_debate.py  nomic_live_fire.py  nomic_loop.py  nomic_staged.py  pii_allowlist.txt  pr_admission_controller.py  pr_stale_run_gc.py  pre_release_check.py  reconcile_status_docs.py  run_dogfood_ab_pairs.py  run_dogfood_benchmark.py  run_execution_gate_adversarial_suite.py  run_offline_golden_path.sh  setup_cloudflare_lb.sh  smoke_self_host_runtime.py  swarm_reconciler.py  test_tiers.sh  todo_audit.py  tune_execution_gate.py
tests/: test_agent_api_common.py  test_agent_grok.py  test_cli_agents.py  test_debate_controller.py  test_handlers_admin_health.py  test_mcp_tools.py  test_reasoning_provenance.py  test_server_metrics.py
(+582 files in other folders)
