[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aragora"
version = "2.8.0"
description = "Control plane for multi-agent vetted decisionmaking across org knowledge and channels"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Agora Contributors"}
]
keywords = [
    "ai",
    "multi-agent",
    "control-plane",
    "deliberation",
    "llm",
    "claude",
    "gpt",
    "consensus",
    "enterprise",
    "decision-assurance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.13.3,<4.0",  # CVE fixes in 3.13.3
    "websockets>=13.0,<15.1",  # google-genai 1.59 requires >=13.0,<15.1
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "bcrypt>=4.0,<6.0",  # Secure password hashing (5.0 adds Argon2 support)
    "cryptography>=46.0,<48.0",  # AES-256-GCM encryption for secrets at rest (46.x for CVE fixes)
    "markupsafe>=2.1.0,<4.0",  # HTML escaping for XSS prevention
    "defusedxml>=0.7,<1.0",  # Safe XML parsing to prevent XXE attacks
    "pyotp>=2.9,<3.0",  # TOTP/HOTP for MFA
    "jinja2>=3.1.6,<4.0",  # CVE-2024-56326 fix
    "urllib3>=2.6.3,<3.0",  # CVE fix
    "httpx>=0.27,<1.0",  # Required by training/tinker_client.py
    "numpy>=2.0,<3.0",  # Required by debate/cache/embeddings_lru.py
    "watchfiles>=0.21,<2.0",  # Required by sync/watcher.py for directory watching
    "boto3>=1.34,<2.0",  # AWS Secrets Manager for production secrets
    "PyJWT>=2.8,<3.0",  # JWT verification for auth, OIDC, and chat webhooks
    "fastapi>=0.109.0,<1.0",  # Async HTTP server (FastAPI v2 API)
    "uvicorn[standard]>=0.27.0,<1.0",  # ASGI server for FastAPI
    "aragora-debate>=0.2.0,<1.0",  # Standalone debate engine (quickstart + playground)
    "python-multipart>=0.0.22",  # CVE-2026-24486 fix (transitive via fastapi/mcp)
    "mcp>=1.0,<2.0",  # Model Context Protocol server for AI tool integration
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<10.0",
    "pytest-asyncio>=0.21,<2.0",
    "pytest-benchmark>=4.0,<6.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-timeout>=2.0,<3.0",
    "pytest-xdist>=3.5,<4.0",  # Parallel test execution
    "pytest-rerunfailures>=14.0,<15.0",  # Rerun flaky tests
    "pytest-randomly>=3.15,<5.0",  # Randomize test order to detect pollution
    "black>=23.0,<27.0",
    "ruff>=0.1,<1.0",
    "bandit>=1.7,<2.0",
    "mypy>=1.8,<2.0",
    "mutmut>=3.0,<4.0",
    "pre-commit>=3.6,<5.0",  # Git hooks for code quality
    "datamodel-code-generator>=0.25,<1.0",  # Python SDK type generation from OpenAPI
    "async-timeout>=4.0,<6.0",  # Async timeouts for Python <3.11 in CI/dev
    "python3-saml>=1.15,<2.0",  # SAML authentication for enterprise SSO testing
    "tiktoken>=0.5,<1.0",  # Token counting for LLM context management
]
# Test dependencies - install with: pip install -e ".[test]"
# This includes all optional dependencies needed for full test coverage
test = [
    # Include dev dependencies inline to avoid self-referential extras during locking
    "pytest>=7.0,<10.0",
    "pytest-asyncio>=0.21,<2.0",
    "pytest-benchmark>=4.0,<6.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-timeout>=2.0,<3.0",
    "pytest-xdist>=3.5,<4.0",
    "pytest-rerunfailures>=14.0,<15.0",
    "pytest-randomly>=3.15,<5.0",  # Randomize test order to detect pollution
    "black>=23.0,<27.0",
    "ruff>=0.1,<1.0",
    "bandit>=1.7,<2.0",
    "mypy>=1.8,<2.0",
    "mutmut>=3.0,<4.0",
    "pre-commit>=3.6,<5.0",  # Git hooks for code quality
    "datamodel-code-generator>=0.25,<1.0",  # Python SDK type generation from OpenAPI
    "async-timeout>=4.0,<6.0",  # Async timeouts for Python <3.11 in CI/dev
    # Database and persistence
    "aiosqlite>=0.19,<1.0",  # Async SQLite for persistence tests
    "supabase>=2.0,<3.0",  # Supabase client tests
    "redis>=5.0.0,<8.0",  # Redis store tests
    "asyncpg>=0.29.0,<1.0",  # Async PostgreSQL for persistence tests
    # Auth and security (PyJWT now in base dependencies)
    # Transcription and media
    "yt-dlp>=2024.1,<2027.0",  # YouTube transcription tests
    "tiktoken>=0.5,<1.0",  # Token counter tests
    "openai>=2.0,<3.0",  # Whisper backend tests (v2 required for RLM compatibility)
    # Integrations
    "twilio>=8.0,<10.0",  # Twilio voice tests
    "mcp>=1.0,<2.0",  # MCP server tests
    "langchain>=1.0,<2.0",  # LangChain integration tests
    # Document processing
    "weaviate-client>=4.0,<5.0",  # Weaviate indexing tests
    # Formal verification
    "z3-solver>=4.12,<5.0",  # Z3 theorem prover for formal verification tests
    # Performance and benchmarking
    "pytest-benchmark>=4.0,<5.0",  # Benchmark tests
    # Cloud and storage
    "boto3>=1.34,<2.0",  # S3 and AWS tests
    # Document generation
    "weasyprint>=68.0,<70.0",  # PDF generation tests
    "reportlab>=3.6,<5.0",  # Report generation (4.x compatible)
    # ML and embeddings
    "scikit-learn>=1.5.0,<2.0",  # ML-based tests
    "sentence-transformers>=3.0.0,<6.0",  # Embedding tests
    # Audio processing
    "pydub>=0.25.0,<1.0",  # Audio processing tests
    # Web search
    "duckduckgo-search>=6.0,<9.0",  # Research/web search tests
    # Transitive CVE pins
    "pillow>=12.1.1",  # CVE-2026-25990 fix (transitive via weasyprint/reportlab)
]
monitoring = [
    "prometheus-client>=0.19,<1.0",
    "sentry-sdk>=2.0,<3.0",
]
# Blockchain integration for ERC-8004 support
blockchain = [
    "web3>=7.0,<8.0",
    "eth-account>=0.13,<1.0",
]
observability = [
    "opentelemetry-api>=1.20.0,<2.0",
    "opentelemetry-sdk>=1.20.0,<2.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0",
    "opentelemetry-instrumentation-logging>=0.41b0,<1.0",
    "prometheus-client>=0.19,<1.0",
    "protobuf>=6.33.5",  # CVE-2026-0994 fix (transitive via opentelemetry/grpc)
]
redis = [
    "redis>=5.0.0,<8.0",
]
persistence = [
    "supabase>=2.0,<3.0",
    "sqlalchemy>=2.0.40,<3.0",
]
postgres = [
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",  # Database migrations
    "nest_asyncio>=1.5,<2.0",  # Allow nested event loops for sync store wrappers
]
documents = [
    "pypdf>=6.6,<7.0",  # CVE fixes require 6.6+
    "pdfplumber>=0.10,<1.0",  # Better PDF table extraction
    "python-docx>=0.8,<2.0",  # Word document parsing
    "openpyxl>=3.1,<4.0",  # Excel spreadsheet parsing
    "python-pptx>=0.6,<1.0",  # PowerPoint presentation parsing
    "ebooklib>=0.18,<1.0",  # EPUB e-book parsing
    "beautifulsoup4>=4.12,<5.0",  # HTML parsing for EPUB
    "mobi>=0.3,<1.0",  # Kindle MOBI parsing
    "weasyprint>=68.0,<70.0",  # HTML to PDF conversion for receipts
    "pillow>=12.1.1",  # CVE-2026-25990 fix (transitive via weasyprint/reportlab)
]
broadcast = [
    "edge-tts>=6.1.0,<8.0",
    "pydub>=0.25.0,<1.0",
    "pyttsx3>=2.90,<3.0;platform_system=='Darwin' or platform_system=='Windows'",
]
broadcast-elevenlabs = [
    "edge-tts>=6.1.0,<8.0",
    "pydub>=0.25.0,<1.0",
    "pyttsx3>=2.90,<3.0;platform_system=='Darwin' or platform_system=='Windows'",
    "elevenlabs>=1.0,<3.0",
]
broadcast-polly = [
    "edge-tts>=6.1.0,<8.0",
    "pydub>=0.25.0,<1.0",
    "pyttsx3>=2.90,<3.0;platform_system=='Darwin' or platform_system=='Windows'",
    "boto3>=1.34,<2.0",
]
# NOTE: broadcast-xtts disabled - TTS requires numpy<2 which conflicts with numpy>=2 in base deps
# To use XTTS v2, create an isolated environment:
#   python -m venv xtts-env && source xtts-env/bin/activate
#   pip install aragora TTS>=0.22
# broadcast-xtts = [
#     "aragora[broadcast]",
#     "TTS>=0.22,<1.0",  # Coqui TTS for XTTS v2 (requires torch)
# ]
broadcast-premium = [
    # Note: XTTS excluded - see broadcast-xtts comment above for isolated install
    "edge-tts>=6.1.0,<8.0",
    "pydub>=0.25.0,<1.0",
    "pyttsx3>=2.90,<3.0;platform_system=='Darwin' or platform_system=='Windows'",
    "elevenlabs>=1.0,<3.0",
    "boto3>=1.34,<2.0",
]
research = [
    "duckduckgo-search>=6.0,<9.0",
    "beautifulsoup4>=4.12,<5.0",
]
gauntlet = [
    # Minimal dependencies for standalone Gauntlet CLI
    # Core package includes all required dependencies
]
ml = [
    "scipy>=1.14.0,<2.0",  # 1.14.0+ required for NumPy 2.x support
    "scikit-learn>=1.5.0,<2.0",  # 1.5.0+ required for NumPy 2.x support
    "sentence-transformers>=3.0.0,<6.0",
]
rlm = [
    # Official RLM library from arXiv:2512.24601 (MIT license)
    # Enables recursive language models for infinite context processing
    # Install manually: pip install git+https://github.com/alexzhang13/rlm.git@v1.0.0
    # The aragora.rlm module also works without this package (graceful fallback via HierarchicalCompressor).
    # Note: rlm is not on PyPI, so this extra is a no-op. Install from git if needed.
]
control-plane = [
    "redis>=5.0.0,<8.0",
    "networkx>=3.0,<4.0",  # DAG workflow representation
]
code-intel = [
    # Tree-sitter for AST parsing
    "tree-sitter>=0.23.0,<1.0",
    "tree-sitter-python>=0.23.0,<1.0",
    "tree-sitter-javascript>=0.23.0,<1.0",
    "tree-sitter-typescript>=0.23.0,<1.0",
    "tree-sitter-go>=0.23.0,<1.0",
    "tree-sitter-rust>=0.23.0,<1.0",
    "tree-sitter-java>=0.23.0,<1.0",
    # Call graph and analysis
    "networkx>=3.0,<4.0",
]
browser = [
    # Playwright for browser automation connector
    # Requires: playwright install chromium (or playwright install)
    "playwright>=1.40,<2.0",
]
gateway = []
enterprise = ["python3-saml>=1.15,<2.0", "prometheus-client>=0.19,<1.0", "sentry-sdk>=2.0,<3.0", "redis>=5.0.0,<8.0"]
connectors = ["aiokafka>=0.9,<1.0", "aio-pika>=9.0,<10.0", "twilio>=8.0,<10.0", "langchain>=1.0,<2.0", "playwright>=1.40,<2.0"]
experimental = ["playwright>=1.40,<2.0", "networkx>=3.0,<4.0"]
obsidian = ["watchdog>=3.0,<7.0"]
all = [
    # Expanded inline to avoid self-referential extras during locking.
    "pytest>=7.0,<10.0",
    "pytest-asyncio>=0.21,<2.0",
    "pytest-benchmark>=4.0,<6.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-timeout>=2.0,<3.0",
    "pytest-xdist>=3.5,<4.0",
    "pytest-rerunfailures>=14.0,<15.0",
    "pytest-randomly>=3.15,<5.0",
    "black>=23.0,<27.0",
    "ruff>=0.1,<1.0",
    "bandit>=1.7,<2.0",
    "mypy>=1.8,<2.0",
    "mutmut>=3.0,<4.0",
    "pre-commit>=3.6,<5.0",
    "datamodel-code-generator>=0.25,<1.0",
    "async-timeout>=4.0,<6.0",
    "aiosqlite>=0.19,<1.0",
    "supabase>=2.0,<3.0",
    "redis>=5.0.0,<8.0",
    "asyncpg>=0.29.0,<1.0",
    "yt-dlp>=2024.1,<2027.0",
    "tiktoken>=0.5,<1.0",
    "openai>=2.0,<3.0",
    "twilio>=8.0,<10.0",
    "mcp>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "weaviate-client>=4.0,<5.0",
    "z3-solver>=4.12,<5.0",
    "boto3>=1.34,<2.0",
    "weasyprint>=68.0,<70.0",
    "reportlab>=3.6,<5.0",
    "scikit-learn>=1.5.0,<2.0",
    "sentence-transformers>=3.0.0,<6.0",
    "pydub>=0.25.0,<1.0",
    "sqlalchemy>=2.0.40,<3.0",
    "pypdf>=6.6,<7.0",
    "pdfplumber>=0.10,<1.0",
    "python-docx>=0.8,<2.0",
    "openpyxl>=3.1,<4.0",
    "python-pptx>=0.6,<1.0",
    "ebooklib>=0.18,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "mobi>=0.3,<1.0",
    "edge-tts>=6.1.0,<8.0",
    "pyttsx3>=2.90,<3.0;platform_system=='Darwin' or platform_system=='Windows'",
    "elevenlabs>=1.0,<3.0",
    "duckduckgo-search>=6.0,<9.0",
    "prometheus-client>=0.19,<1.0",
    "sentry-sdk>=2.0,<3.0",
    "scipy>=1.14.0,<2.0",
    "sentence-transformers>=3.0.0,<6.0",
    "networkx>=3.0,<4.0",
    "alembic>=1.13.0,<2.0",
    "nest_asyncio>=1.5,<2.0",
    "opentelemetry-api>=1.20.0,<2.0",
    "opentelemetry-sdk>=1.20.0,<2.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0",
    "opentelemetry-instrumentation-logging>=0.41b0,<1.0",
    "tree-sitter>=0.23.0,<1.0",
    "tree-sitter-python>=0.23.0,<1.0",
    "tree-sitter-javascript>=0.23.0,<1.0",
    "tree-sitter-typescript>=0.23.0,<1.0",
    "tree-sitter-go>=0.23.0,<1.0",
    "tree-sitter-rust>=0.23.0,<1.0",
    "tree-sitter-java>=0.23.0,<1.0",
    "playwright>=1.40,<2.0",
    "aiokafka>=0.9,<1.0",
    "aio-pika>=9.0,<10.0",
    "python3-saml>=1.15,<2.0",
    # Transitive CVE pins
    "pillow>=12.1.1",  # CVE-2026-25990 fix
    "protobuf>=6.33.5",  # CVE-2026-0994 fix
]

[project.scripts]
aragora = "aragora.cli.main:main"
aragora-mcp = "aragora.mcp.server:main"
gauntlet = "aragora.gauntlet.__main__:main"

[project.urls]
Homepage = "https://aragora.ai"
Documentation = "https://github.com/an0mium/aragora#readme"
Repository = "https://github.com/an0mium/aragora"
Issues = "https://github.com/an0mium/aragora/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aragora", "aragora.*"]
exclude = ["aragora-debate*"]

[tool.setuptools.package-data]
"aragora" = ["py.typed"]
"aragora.fixtures" = ["*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "T201", "BLE001", "UP006", "UP007", "G004", "C4", "SIM910", "S101"]  # T201 = print, BLE001 = blind except, UP006/UP007 = modern typing, G004 = no f-string in logger, C4 = unnecessary comprehensions, SIM910 = dict.get default None, S101 = no assert in production
ignore = ["E402", "E501", "E731", "E741", "E712", "C401", "C405", "C408", "C416"]

[tool.ruff.lint.per-file-ignores]
# Allow print statements in CLI modules, migrations, and scripts
"aragora/cli/*" = ["T201", "BLE001"]
"aragora/ideacloud/cli/*" = ["T201"]
"aragora/migrations/*" = ["T201", "BLE001"]
"aragora/db/migrate.py" = ["T201", "BLE001"]
"aragora/persistence/migrations/*" = ["T201", "BLE001"]
"aragora/training/exporters/*" = ["T201", "BLE001"]
"aragora/training/tinker_client.py" = ["T201", "BLE001"]
"aragora/debate/breakpoints.py" = ["T201", "BLE001"]
"aragora/nomic/gates.py" = ["T201", "BLE001"]
"aragora/nomic/approval.py" = ["T201", "BLE001"]
"aragora/nomic/scope_guard.py" = ["T201", "BLE001"]
"aragora/server/__main__.py" = ["T201", "BLE001"]
"aragora/server/startup/health_check.py" = ["T201", "BLE001"]
"scripts/*" = ["T201", "F401", "F841", "BLE001", "G004", "S101"]
"tests/*" = ["T201", "F401", "F821", "F841", "BLE001", "G004", "S101"]  # F821: SSO tests need refactor
"aragora/**/test_*.py" = ["S101"]  # Allow assert in test files nested inside aragora/
"aragora/**/tests/*" = ["S101"]  # Allow assert in test directories nested inside aragora/
"examples/*" = ["T201", "BLE001"]
"sdk/cookbook/*" = ["T201", "BLE001", "F841"]
"deprecated/*" = ["UP"]  # Deprecated code, don't modernize
# BLE001: Now enforced on new code - Phase 12 (Feb 2026)
# Only exempted in specific modules above (cli, migrations, scripts, tests)
# G004: Ignore f-string in logger calls for existing code (11,271 violations, ruff cannot auto-fix)
# New code should use lazy % formatting: logger.info("msg %s", var) instead of logger.info(f"msg {var}")
# BLE001: Ignore bare exception handlers in all modules (to be fixed incrementally)
# 2307+ existing violations documented - scheduled for Phase 30 migration
# G004: Ignore f-string in logger calls for existing code (11,271 violations, ruff cannot auto-fix)
# New code should use lazy % formatting: logger.info("msg %s", var) instead of logger.info(f"msg {var}")
# C4: 2000+ existing unnecessary comprehension violations - fix incrementally
# SIM910: 48 existing dict.get(key, None) → dict.get(key) violations
"aragora/*" = ["BLE001", "G004", "C4", "SIM910"]
# Legacy modules with explicit BLE001 tracking (subset of above, for reference)
"aragora/analysis/codebase/bug_detector.py" = ["BLE001", "G004"]
"aragora/agents/code_reviewer.py" = ["BLE001", "G004"]
"aragora/broadcast/mixer.py" = ["BLE001", "G004"]
"aragora/connectors/ecommerce/*.py" = ["BLE001", "G004"]
"aragora/debate/phases/*.py" = ["BLE001", "G004"]
"aragora/debate/prompt_builder.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/adapters/*.py" = ["BLE001", "G004"]
"aragora/rlm/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/control_plane/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/features/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/integrations/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/integration_management.py" = ["BLE001", "G004"]
"aragora/server/handlers/knowledge_base/mound/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/external_agents.py" = ["BLE001", "G004"]
"aragora/server/handlers/receipts.py" = ["BLE001", "G004"]
"aragora/server/handlers/sme_success_dashboard.py" = ["BLE001", "G004"]
"aragora/server/persistent_origin_store.py" = ["BLE001", "G004"]
"aragora/server/state.py" = ["BLE001", "G004"]
"aragora/server/openapi_impl.py" = ["BLE001", "G004"]
"aragora/storage/*.py" = ["BLE001", "G004"]
"aragora/connectors/blockchain/connector.py" = ["BLE001", "G004"]
"aragora/connectors/enterprise/database/*.py" = ["BLE001", "G004"]
"aragora/connectors/supermemory/*.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/api/*.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/core.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/checkpoint.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/ops/*.py" = ["BLE001", "G004"]
"aragora/knowledge/pipeline.py" = ["BLE001", "G004"]
"aragora/server/handlers/repository.py" = ["BLE001", "G004"]
"aragora/server/handlers/gauntlet/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/memory/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/cross_pollination.py" = ["BLE001", "G004"]
"aragora/server/handlers/dr_handler.py" = ["BLE001", "G004"]
"aragora/server/handlers/explainability.py" = ["BLE001", "G004"]
"aragora/server/handlers/autonomous/*.py" = ["BLE001", "G004"]
"aragora/server/prometheus.py" = ["BLE001", "G004"]
"aragora/nomic/*.py" = ["BLE001", "G004"]
"aragora/queue/*.py" = ["BLE001", "G004"]
"aragora/mcp/*.py" = ["BLE001", "G004"]
"aragora/mcp/**/*.py" = ["BLE001", "G004"]
"aragora/debate/context_strategies/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/_analytics_metrics_impl.py" = ["BLE001", "G004"]
"aragora/server/handlers/social/_slack_impl/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/bots/*.py" = ["BLE001", "G004"]
"aragora/gateway/enterprise/audit_interceptor*.py" = ["BLE001", "G004"]
"aragora/gateway/enterprise/audit_interceptor/*.py" = ["BLE001", "G004"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
timeout = 60
timeout_method = "thread"
filterwarnings = [
    # Show deprecation warnings once per location (don't suppress — catch regressions early)
    "default::DeprecationWarning",
    "default::PendingDeprecationWarning",
    # Ignore pytest collection warnings for non-test classes in pipeline/test_plan.py
    "ignore:cannot collect test class.*:pytest.PytestCollectionWarning",
    # Ignore unawaited coroutine warnings from AsyncMock cleanup during tests
    "ignore:coroutine .* was never awaited:RuntimeWarning",
    # Suppress pyiceberg Pydantic V2.12 deprecation warnings (transitive dep via storage3;
    # fixed in pyiceberg 0.11.0 — remove this filter after upgrading)
    "ignore::pydantic.warnings.PydanticDeprecatedSince212:pyiceberg",
    # Suppress pyiceberg parser deprecation warnings from upstream pyparsing API renames.
    # Use DeprecationWarning to avoid importing optional pyparsing at pytest-config parse time.
    # Remove after pyiceberg updates parser calls (enablePackrat/escChar/unquoteResults).
    "ignore::DeprecationWarning:pyiceberg.expressions.parser",
]
markers = [
    "unit: marks tests as fast unit tests (run with '-m unit')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "load: marks tests as load/stress tests (deselect with '-m \"not load\"')",
    "integration: marks tests as integration tests",
    "integration_minimal: marks integration tests safe to run without external services",
    "e2e: marks tests as end-to-end tests (require running server)",
    "serial: marks tests that must run serially (use with 'pytest -p no:xdist' or '-n0')",
    "knowledge: marks tests for knowledge mound features",
    "new_features: marks tests for new feature E2E testing",
    "experimental: marks tests for experimental/unstable features",
    "external: marks tests requiring external services (APIs, databases)",
    "benchmark: marks benchmark tests (run separately from unit suite)",
    "smoke: marks critical smoke tests for fast CI gating (run with '-m smoke')",
    "flaky: marks tests with known intermittent failures",
    "requires_server: marks tests that need a running Aragora server",
    "audit: marks tests for audit trail retention and SOC 2 compliance",
    "compliance: marks tests for compliance APIs (SOC 2, GDPR, CCPA)",
    "performance: marks tests for performance SLA validation (latency, throughput)",
    "privacy: marks tests for privacy workflows (GDPR/CCPA/consent)",
    "enterprise: marks tests for enterprise-only features (SSO, multi-tenancy, audit)",
    "rate_limit_test: marks tests that need real rate limiter behavior (opts out of global bypass)",
    "no_auto_auth: marks tests that need real authentication (opts out of global RBAC bypass)",
    "network: marks tests that make real network calls",
]
# Automatically rerun flaky tests up to 3 times
# pytest-randomly: Tests run in random order by default to detect pollution
# To reproduce a specific order: pytest -p randomly --randomly-seed=<seed>
# To disable randomization: pytest -p no:randomly
addopts = "--import-mode=importlib --reruns 3 --reruns-delay 1 --only-rerun AssertionError --only-rerun RuntimeError --only-rerun KeyError --only-rerun TypeError --only-rerun SecretNotFoundError --only-rerun ModuleNotFoundError --only-rerun AttributeError"
# Parallel test execution: pip install pytest-xdist && pytest -n auto
# To run serial-only tests: pytest -m serial -n0

[tool.mypy]
python_version = "3.11"
mypy_path = "typings"
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    ".venv/",
    "node_modules/",
]
# Start non-strict globally, enable per-module
check_untyped_defs = false
disallow_untyped_defs = false
strict_optional = false

# Strict settings for core modules (enable incrementally)
[[tool.mypy.overrides]]
module = "aragora.nomic.meta_planner"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_return_any = true
warn_unreachable = true
strict = true

[[tool.mypy.overrides]]
module = [
    "aragora.core",
    "aragora.config.*",
    "aragora.types.*",
    "aragora.persistence.db_config",
    "aragora.persistence.models",
    "aragora.server.validation.*",
    "aragora.protocols",
    "aragora.ranking.elo_core",
    "aragora.debate.autonomic_executor",
    "aragora.debate.sanitization",
    "aragora.resilience",
    # Added strict - clean modules (Jan 2026)
    "aragora.debate.termination_checker",
    "aragora.debate.team_selector",
    "aragora.debate.convergence.*",
    "aragora.exceptions",
    "aragora.auth.lockout",
    # Added strict - Phase 3 modules (Jan 2026)
    "aragora.agents.calibration",
    "aragora.reasoning.belief",
    "aragora.storage.base_store",
    "aragora.debate.memory_manager",
    # Added strict - Phase 5 storage layer (Jan 2026)
    "aragora.storage.factory",
    "aragora.storage.webhook_store",
    # Added strict - Phase 6 agent modules (Jan 2026)
    "aragora.agents.api_agents.anthropic",
    "aragora.agents.api_agents.openai",
    "aragora.agents.api_agents.mistral",
    "aragora.agents.api_agents.base",
    "aragora.agents.streaming",
    # Added strict - Phase 7 type safety expansion (Jan 2026)
    "aragora.memory.database",
    "aragora.server.stream.events",
    "aragora.debate.phases.vote_weighter",
    "aragora.debate.phases.weight_calculator",
    "aragora.debate.phases.vote_collector",
    "aragora.debate.phases.vote_aggregator",
    "aragora.debate.phases.consensus_verification",
    "aragora.debate.phases.roles_manager",
    # Added strict - Debate phases expansion (Jan 2026)
    "aragora.debate.phases.metrics",
    "aragora.debate.phases.spectator",
    "aragora.debate.phases.critique",
    "aragora.debate.phases.winner_selector",
    "aragora.debate.phases.training_emitter",
    "aragora.debate.phases.judgment",
    "aragora.debate.phases.synthesis_generator",
    "aragora.debate.context",
    "aragora.debate.protocol",
    "aragora.debate.roles",
    "aragora.agents.base",
    "aragora.agents.registry",
    "aragora.ranking.elo",
    "aragora.ranking.relationships",
    "aragora.templates",
    "aragora.debate.prompt_builder",
    "aragora.memory.__init__",
    # Added strict - Phase 8 plugin modules (Jan 2026)
    "aragora.plugins.builtin.lint",
    "aragora.plugins.builtin.security",
    "aragora.plugins.builtin.tests",
    # Added strict - Phase 18 plugin system completion (Jan 2026)
    "aragora.plugins.__init__",
    "aragora.plugins.manifest",
    "aragora.plugins.runner",
    "aragora.plugins.builtin.__init__",
    "aragora.plugins.selection.__init__",
    "aragora.plugins.selection.protocols",
    "aragora.plugins.selection.registry",
    "aragora.plugins.selection.strategies",
    # Added strict - Phase 9 server handlers (Jan 2026)
    "aragora.server.handlers.reviews",
    "aragora.server.handlers.docs",
    "aragora.server.handlers.exceptions",
    "aragora.server.handlers.routing",
    # Added strict - Phase 10 utils modules (Jan 2026)
    "aragora.utils.sql_helpers",
    "aragora.utils.error_sanitizer",
    "aragora.utils.async_utils",
    "aragora.utils.timeouts",
    "aragora.utils.paths",
    "aragora.utils.optional_imports",
    "aragora.utils.cache_registry",
    "aragora.utils.token_helpers",
    # Added strict - Phase 11 handlers expansion (Jan 2026)
    "aragora.server.handlers.laboratory",
    "aragora.server.handlers.critique",
    "aragora.server.handlers.introspection",
    "aragora.server.handlers.breakpoints",
    "aragora.server.handlers.moments",
    "aragora.server.handlers.gallery",
    "aragora.server.handlers.persona",
    "aragora.server.handlers.nomic",
    "aragora.server.handlers.selection",
    # Added strict - Phase 14 handler reorganization (Jan 2026)
    # Core handler infrastructure
    "aragora.server.handlers.base",
    "aragora.server.handlers.types",
    # Admin handlers (admin/ subdirectory)
    "aragora.server.handlers.admin.health",
    "aragora.server.handlers.admin.admin",
    "aragora.server.handlers.admin.billing",
    "aragora.server.handlers.admin.dashboard",
    "aragora.server.handlers.admin.system",
    # Agent handlers (agents/ subdirectory)
    "aragora.server.handlers.agents.agents",
    "aragora.server.handlers.agents.calibration",
    "aragora.server.handlers.agents.leaderboard",
    "aragora.server.handlers.agents.probes",
    # Auth handlers (auth/ subdirectory)
    "aragora.server.handlers.auth.handler",
    "aragora.server.handlers.auth.store",
    "aragora.server.handlers.auth.validation",
    # Debate handlers (debates/ subdirectory)
    "aragora.server.handlers.debates.handler",
    "aragora.server.handlers.debates.batch",
    "aragora.server.handlers.debates.fork",
    "aragora.server.handlers.debates.graph_debates",
    "aragora.server.handlers.debates.matrix_debates",
    # Evolution handlers (evolution/ subdirectory)
    "aragora.server.handlers.evolution.handler",
    "aragora.server.handlers.evolution.ab_testing",
    # Feature handlers (features/ subdirectory)
    "aragora.server.handlers.features.audio",
    "aragora.server.handlers.features.broadcast",
    "aragora.server.handlers.features.documents",
    "aragora.server.handlers.features.evidence",
    "aragora.server.handlers.features.features",
    "aragora.server.handlers.features.plugins",
    "aragora.server.handlers.features.pulse",
    # Memory handlers (memory/ subdirectory)
    "aragora.server.handlers.memory.memory",
    "aragora.server.handlers.memory.memory_analytics",
    "aragora.server.handlers.memory.insights",
    "aragora.server.handlers.memory.learning",
    # Social handlers (social/ subdirectory)
    "aragora.server.handlers.social.collaboration",
    "aragora.server.handlers.social.notifications",
    "aragora.server.handlers.social.relationship",
    "aragora.server.handlers.social.sharing",
    "aragora.server.handlers.social.slack",
    "aragora.server.handlers.social.social_media",
    # Verification handlers (verification/ subdirectory)
    "aragora.server.handlers.verification.verification",
    "aragora.server.handlers.verification.formal_verification",
    # Utils handlers (utils/ subdirectory)
    "aragora.server.handlers.utils.decorators",
    "aragora.server.handlers.utils.params",
    "aragora.server.handlers.utils.rate_limit",
    "aragora.server.handlers.utils.responses",
    "aragora.server.handlers.utils.routing",
    "aragora.server.handlers.utils.safe_data",
    # Root-level handlers
    "aragora.server.handlers.analytics",
    "aragora.server.handlers.audit_export",
    "aragora.server.handlers.auditing",
    "aragora.server.handlers.belief",
    "aragora.server.handlers.checkpoints",
    "aragora.server.handlers.consensus",
    "aragora.server.handlers.gauntlet",
    "aragora.server.handlers.genesis",
    "aragora.server.handlers.metrics",
    "aragora.server.handlers.oauth",
    "aragora.server.handlers.organizations",
    "aragora.server.handlers.replays",
    "aragora.server.handlers.sso",
    "aragora.server.handlers.tournaments",
    "aragora.server.handlers.training",
    "aragora.server.handlers.webhooks",
    # Added strict - Phase 11 broadcast modules (Jan 2026)
    "aragora.broadcast.script_gen",
    "aragora.broadcast.mixer",
    # Added strict - Phase 11 memory modules (Jan 2026)
    "aragora.memory.embeddings",
    "aragora.memory.streams",
    # Added strict - Phase 11 server stream (Jan 2026)
    "aragora.server.stream.state_manager",
    "aragora.server.stream.emitter",
    "aragora.server.stream.arena_hooks",
    # Added strict - Phase 11 insights modules (Jan 2026)
    "aragora.insights.__init__",
    "aragora.insights.database",
    # Added strict - Phase 11 additional modules (Jan 2026)
    "aragora.reasoning.__init__",
    "aragora.maintenance.__init__",
    "aragora.billing.usage",
    "aragora.billing.models",
    "aragora.server.oauth_state_store",
    # Added strict - Phase 2 Nomic governance modules (Jan 2026)
    "aragora.nomic.gates",
    "aragora.nomic.audit",
    "aragora.nomic.state_machine",
    "aragora.nomic.events",
    "aragora.nomic.states",
    # Added strict - Phase 15 refactored modules (Jan 2026)
    "aragora.debate.lifecycle_manager",
    "aragora.debate.event_emission",
    "aragora.debate.checkpoint_ops",
    "aragora.debate.grounded_operations",
    "aragora.debate.prompt_context",
    "aragora.debate.context_delegation",
    "aragora.memory.continuum_stats",
    "aragora.memory.continuum_consolidation",
    "aragora.server.response_utils",
    "aragora.server.startup",
    "aragora.ranking.match_recorder",
    "aragora.ranking.verification",
    "aragora.ranking.snapshot",
    "aragora.client.errors",
    "aragora.client.transport",
    # Added strict - Phase 16 type safety expansion (Jan 2026)
    "aragora.debate.judge_selector",
    "aragora.server.handlers.sso",
    "aragora.server.handlers.oauth",
    "aragora.cli.gauntlet",
    "aragora.storage.token_blacklist_store",
    # Added strict - Phase 16 refactored modules (Jan 2026)
    "aragora.routing.domain_matcher",
    "aragora.routing.team_builder",
    "aragora.server.handlers.debates.export",
    "aragora.server.handlers.debates.analysis",
    "aragora.server.handlers.debates.search",
    # Added strict - Phase 17 mypy expansion (Jan 2026)
    "aragora.memory.continuum",
    "aragora.debate.phases.critique",
    "aragora.queue.status",
    "aragora.agents.api_agents.common",
    "aragora.debate.convergence",
    # Added strict - Control Plane modules (Jan 2026)
    "aragora.control_plane.*",
    "aragora.server.handlers.control_plane",
    # Added strict - Phase 19 training module (Jan 2026)
    "aragora.training.__init__",
    "aragora.training.debate_exporter",
    "aragora.training.evaluator",
    "aragora.training.model_registry",
    "aragora.training.specialist_models",
    "aragora.training.tinker_client",
    "aragora.training.training_scheduler",
    "aragora.training.exporters.__init__",
    "aragora.training.exporters.base",
    "aragora.training.exporters.dpo_exporter",
    "aragora.training.exporters.gauntlet_exporter",
    "aragora.training.exporters.sft_exporter",
    # Added strict - Phase 20 enterprise connectors (Jan 2026)
    "aragora.connectors.enterprise.*",
    # Added strict - Phase 21 auth and lifecycle modules (Jan 2026)
    "aragora.auth.*",
    "aragora.debate.lifecycle_manager",
    "aragora.debate.event_emission",
    "aragora.debate.debate_hooks",
    "aragora.debate.event_bus",
    # Added strict - RLM modules (Jan 2026)
    "aragora.rlm.__init__",
    "aragora.rlm.types",
    "aragora.rlm.bridge",
    "aragora.rlm.compressor",
    "aragora.rlm.metrics",
    "aragora.rlm.repl",
    "aragora.rlm.strategies",
    "aragora.rlm.streaming",
    "aragora.rlm.training.__init__",
    "aragora.rlm.training.buffer",
    "aragora.rlm.training.policy",
    "aragora.rlm.training.reward",
    "aragora.debate.cognitive_limiter_rlm",
    "aragora.memory.cross_debate_rlm",
    # Added strict - Phase 4 transcription module (Jan 2026)
    "aragora.transcription.*",
    "aragora.server.handlers.transcription",
    # Added strict - Core modules (Jan 2026)
    "aragora.exceptions",
    "aragora.serialization",
    # Added strict - Phase 23 clean modules (Jan 2026)
    "aragora.knowledge.types",
    "aragora.agents.types",
    "aragora.rbac.models",
    "aragora.rbac.defaults",
    # Added strict - Phase 21 RBAC expansion (Jan 2026)
    "aragora.rbac.checker",
    "aragora.rbac.middleware",
    "aragora.rbac.audit",
    "aragora.rbac.enforcer",
    "aragora.rbac.ownership",
    "aragora.rbac.types",
    # Added strict - Phase 24 extracted modules (Jan 2026)
    "aragora.server.prometheus_nomic",
    "aragora.server.prometheus_control_plane",
    "aragora.server.prometheus_rlm",
    "aragora.debate.phases.feedback_elo",
    "aragora.debate.phases.feedback_persona",
    "aragora.debate.phases.feedback_evolution",
    "aragora.rlm.debate_adapter",
    "aragora.rlm.knowledge_adapter",
    "aragora.rlm.hierarchy_cache",
    "aragora.rlm.types",
    # Added strict - Phase 25 extracted modules (Jan 2026)
    "aragora.reasoning.crux_detector",
    "aragora.observability.metrics.bridge",
    "aragora.observability.metrics.km",
    "aragora.observability.metrics.notification",
    "aragora.rlm.streaming_mixin",
    "aragora.client.resources.gauntlet",
    "aragora.client.resources.graph_debates",
    "aragora.client.resources.matrix_debates",
    "aragora.client.resources.replay",
    # Added strict - Phase 26 additional modules (Jan 2026)
    "aragora.client.resources.agents",
    "aragora.client.resources.memory",
    "aragora.client.resources.verification",
    "aragora.modes.tool_groups",
    "aragora.modes.builtin.architect",
    "aragora.modes.builtin.coder",
    "aragora.modes.builtin.debugger",
    "aragora.modes.builtin.reviewer",
    "aragora.ranking.verification",
    "aragora.billing.jwt_auth",
    "aragora.spectate.events",
    "aragora.mcp.tools_module.gauntlet",
    # Added strict - Phase 27 continuum extractions (Jan 2026)
    "aragora.memory.continuum_glacial",
    "aragora.memory.continuum_snapshot",
    # Added strict - Phase 27 workflow templates (Jan 2026)
    "aragora.workflow.templates.__init__",
    "aragora.workflow.templates.package",
    "aragora.workflow.templates.patterns",
    "aragora.workflow.templates.legal",
    "aragora.workflow.templates.healthcare",
    "aragora.workflow.templates.accounting",
    "aragora.workflow.templates.ai_ml",
    "aragora.workflow.templates.code",
    "aragora.workflow.templates.devops",
    "aragora.workflow.templates.product",
    # Added strict - Phase 27 misc modules (Jan 2026)
    "aragora.server.stream.events",
    "aragora.client.resources.leaderboard",
    "aragora.debate.safety",
    "aragora.replay.schema",
    "aragora.modes.builtin.orchestrator",
    "aragora.server.handlers.knowledge",
    "aragora.broadcast.mixer",
    # Added strict - Phase 28 RBAC and billing (Jan 2026)
    "aragora.rbac.types",
    "aragora.rbac.models",
    "aragora.rbac.defaults",
    "aragora.billing.jwt_auth",
    # Added strict - Phase 29 workflow engine hardening (Jan 2026)
    "aragora.workflow.types",
    "aragora.workflow.step",
    "aragora.workflow.engine",
    "aragora.workflow.checkpoint_store",
    "aragora.workflow.safe_eval",
    "aragora.workflow.queue.task",
    "aragora.workflow.queue.queue",
    "aragora.workflow.queue.persistent_queue",
    "aragora.workflow.queue.executor",
    "aragora.workflow.queue.scheduler",
    # Added strict - Phase 30 exception handling hardening (Jan 2026)
    "aragora.auth.oidc",
    "aragora.storage.redis_ha",
    "aragora.storage.integration_store",
    "aragora.storage.teams_tenant_store",
    "aragora.storage.slack_workspace_store",
    "aragora.storage.discord_guild_store",
    # Added strict - Phase 31 knowledge and handler cleanup (Jan 2026)
    "aragora.server.handlers.inbox.__init__",
    "aragora.knowledge.mound.adapters.__init__",
    "aragora.knowledge.mound.ops.staleness",
    "aragora.knowledge.mound.converters",
    "aragora.knowledge.__init__",
    "aragora.server.handlers.debates.response_formatting",
    "aragora.server.handlers.knowledge_base.mound.extraction",
    "aragora.server.handlers.utils.url_security",
    "aragora.server.handlers.knowledge_base.mound.export",
    "aragora.server.handlers.knowledge_base.mound.contradiction",
    "aragora.knowledge.mound.ops.__init__",
    "aragora.knowledge.mound.culture.patterns",
    "aragora.server.handlers.bots.zoom",
    "aragora.server.handlers.knowledge_base.mound.sync",
    "aragora.knowledge.mound.verticals.registry",
    "aragora.server.handlers.features.provenance",
    "aragora.server.handlers.autonomous.approvals",
    "aragora.knowledge.unified.types",
    "aragora.server.handlers.knowledge_base.mound.dedup",
    "aragora.server.handlers.bots.teams",
    # Added strict - Phase 8 high-traffic handlers (Feb 2026)
    "aragora.server.handlers.admin.dashboard",
    "aragora.server.handlers.admin.handler",
    "aragora.server.handlers.admin.billing",
    "aragora.server.handlers.admin.credits",
    "aragora.server.handlers.knowledge.checkpoints",
    "aragora.server.handlers.knowledge.sharing_notifications",
    # Added strict - Phase 33 type safety expansion (Feb 2026)
    "aragora.mcp.tools",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Moderate settings - fallback for any new handler modules
# Note: Handler __init__.py files promoted to strict in Phase 4 (Feb 2026)
# These should only contain re-exports and have minimal logic
[[tool.mypy.overrides]]
module = [
    "aragora.server.handlers.__init__",
    "aragora.server.handlers.admin.__init__",
    "aragora.server.handlers.agents.__init__",
    "aragora.server.handlers.auth.__init__",
    "aragora.server.handlers.debates.__init__",
    "aragora.server.handlers.evolution.__init__",
    "aragora.server.handlers.features.__init__",
    "aragora.server.handlers.memory.__init__",
    "aragora.server.handlers.social.__init__",
    "aragora.server.handlers.verification.__init__",
    "aragora.server.handlers.utils.__init__",
]
disallow_untyped_defs = true
check_untyped_defs = true

# Moderate-strict for complex modules (check untyped defs)
# Note: aragora.memory.continuum promoted to strict in Phase 17
[[tool.mypy.overrides]]
module = [
    "aragora.debate.orchestrator",
    "aragora.agents.api_agents.*",
    "aragora.memory.consensus",
    # aragora.memory.streams promoted to strict in Phase 11
    # Phase 4: bots module - moderate until decorator types fixed
    "aragora.bots.*",
    "aragora.server.handlers.bots.*",
]
disallow_untyped_defs = false
check_untyped_defs = true

# Allow untyped for deprecated modules
[[tool.mypy.overrides]]
module = [
    "aragora.agents.cli_agents",
]
disallow_untyped_defs = false
check_untyped_defs = false

# Ignore missing stubs for third-party libraries
[[tool.mypy.overrides]]
module = ["yaml", "croniter"]
ignore_missing_imports = true

# ============================================================================
# PROMOTED TO STRICT (Phase 25 FINAL, Jan 2026)
# All remaining modules now pass mypy --follow-imports=silent
# ============================================================================
# aragora.nomic.phases.*
# aragora.nomic.checkpoints
# aragora.verification.proofs
# aragora.verification.formal
# aragora.gauntlet.heatmap
# aragora.gauntlet.receipt
# aragora.export.audit_trail
# aragora.export.artifact
# aragora.runtime.autotune
# aragora.modes.redteam
# aragora.training.model_registry
# aragora.pipeline.pr_generator
# aragora.policy.engine
# aragora.storage.repositories.*
# aragora.server.openapi
# aragora.server.validation.decorators
# aragora.server.middleware.*
# aragora.server.handlers.admin.cache
# aragora.documents.ingestion.unstructured_adapter
# aragora.documents.indexing.weaviate_store
# aragora.evidence.collector

# ============================================================================
# PROMOTED TO STRICT (Phase 24, Jan 2026)
# These modules now pass mypy --ignore-missing-imports
# ============================================================================
# aragora.persistence.supabase_client
# aragora.persistence.migrations.*
# aragora.observability.slo
# aragora.billing.stripe_client
# aragora.billing.auth.blacklist
# aragora.storage.audit_store
# aragora.storage.organization_store
# aragora.storage.postgres_store
# aragora.connectors.enterprise.database.sqlserver
# aragora.connectors.enterprise.database.mysql
# aragora.connectors.enterprise.database.mongodb
# aragora.connectors.enterprise.database.postgres
# aragora.connectors.enterprise.healthcare.ehr.epic
# aragora.connectors.enterprise.healthcare.ehr.cerner
# aragora.connectors.enterprise.healthcare.hl7v2
# aragora.connectors.chat.whatsapp
# aragora.connectors.chat.telegram
# aragora.connectors.payments.paypal
# aragora.connectors.accounting.qbo
# aragora.server.stream.debate_executor
# aragora.server.handlers.knowledge.analytics
# aragora.server.stream.servers
# aragora.mcp.server

# ============================================================================
# PROMOTED TO STRICT (Phase 23, Jan 2026)
# These modules now pass mypy --ignore-missing-imports
# ============================================================================
# aragora.server.handlers.utils.database
# aragora.agents.api_agents.rate_limiter
# aragora.server.question_classifier
# aragora.mcp.tools_module.evidence
# aragora.mcp.tools_module.integrations
# aragora.visualization.replay
# aragora.tournaments.tournament
# aragora.ranking.km_elo_bridge
# aragora.cli.template
# aragora.cli.knowledge
# aragora.cli.document_audit
# aragora.cli.audit
# aragora.cli.gauntlet
# aragora.tools.code
# aragora.server.handlers.inbox_command

# ============================================================================
# PROMOTED TO STRICT (Phase 22, Jan 2026)
# These modules now pass mypy --ignore-missing-imports
# ============================================================================
# aragora.server.state
# aragora.server.debate_utils
# aragora.server.static_server
# aragora.server.storage
# aragora.server.research_phase
# aragora.server.debate_queue
# aragora.db.backends
# aragora.db.migrate
# aragora.utils.optional_imports
# aragora.utils.cache
# aragora.services.registry
# aragora.debate.tracing
# aragora.debate.phases.metrics
# aragora.debate.phases.spectator
# aragora.debate.graph
# aragora.debate.agent_pool
# aragora.debate.event_bridge
# aragora.debate.role_matcher
# aragora.debate.context_gatherer
# aragora.debate.similarity.backends
# aragora.debate.traces_database
# aragora.agents.telemetry
# aragora.cli.replay
# aragora.memory.tier_manager
# aragora.memory.consensus
# aragora.queue.status
# aragora.connectors.github
# aragora.connectors.base
# aragora.connectors.youtube_uploader
# aragora.connectors.twitter_poster
# aragora.connectors.wikipedia
# aragora.connectors.sec
# aragora.connectors.newsapi
# aragora.connectors.web
# aragora.broadcast.storage
# aragora.broadcast.tts_backends
# aragora.storage.schema
# aragora.storage.user_store
# aragora.storage.token_blacklist_store
# aragora.storage.base_database
# aragora.nomic.recovery
# aragora.nomic.preflight
# aragora.logging_config
# aragora.client.websocket
# aragora.observability.immutable_log
# aragora.auth.lockout
# aragora.auth.saml
# aragora.auth.oidc
# aragora.gauntlet.storage
# aragora.ranking.calibration_database
# aragora.billing.payment_recovery
# aragora.knowledge.fact_store
# aragora.knowledge.fact_extractor
# aragora.insights.store
# aragora.training.tinker_client
# aragora.pulse.ingestor
# aragora.pulse.scheduler
# aragora.genesis.ledger
# aragora.genesis.breeding
# aragora.audit.evidence_adapter
# aragora.modes.probes.strategies
# aragora.privacy.classifier
# aragora.privacy.audit_log
# aragora.privacy.isolation
# aragora.security.encryption
# aragora.fixtures
# ============================================================================

# Ignore errors in scripts (not part of main package)
[[tool.mypy.overrides]]
module = [
    "scripts.*",
]
ignore_errors = true

# Mixin modules use cross-class attribute access that mypy cannot resolve
# These will be properly typed when converted to Protocol-based typing
[[tool.mypy.overrides]]
module = [
    "aragora.server.handlers.workspace.crud",
    "aragora.server.handlers.workspace.members",
    "aragora.server.handlers.workspace.policies",
    "aragora.server.handlers.workspace.settings",
    "aragora.server.handlers.social.telegram.commands",
    "aragora.server.handlers.social.telegram.callbacks",
    "aragora.server.handlers.social.telegram.webhooks",
    "aragora.server.handlers.social.telegram._common",
]
disable_error_code = ["attr-defined"]

# LangChain integration uses try/except import fallbacks for langchain_core vs
# legacy langchain package compatibility. The intentional redefinitions trigger
# no-redef which cannot be suppressed inline (linter strips type: ignore comments).
[[tool.mypy.overrides]]
module = [
    "aragora.integrations.langchain.callbacks",
    "aragora.integrations.langchain.chains",
    "aragora.integrations.langchain.retriever",
    "aragora.integrations.langchain.tools",
]
disable_error_code = ["no-redef"]

[tool.mutmut]
# Note: mutmut v3.4.0 has a bug parsing paths_to_mutate from pyproject.toml
# For now, use: mutmut run aragora/ranking/elo_core.py (positional arg)
# Or downgrade to mutmut v2.x which uses different config format
paths_to_mutate = "aragora/"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
dict_synonyms = "Struct,NamedTuple,Dict"
backup = false

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["aragora"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "aragora/live/*",  # Frontend code
    "*/migrations/*",
]

[tool.coverage.report]
# Coverage threshold - incrementally raised
# 19% (initial) -> 30% (Sprint 2.1) -> 45% (Sprint 9) -> 65% (Jan 2026) -> 68% -> 70% (Feb 2026)
# Enterprise modules (control_plane, tenancy, policy, privacy) at 70%
# 19% (initial) -> 30% (Sprint 2.1) -> 45% (Sprint 9) -> 65% (Jan 2026) -> 68% -> 70% -> 71% -> 73% (Feb 2026)
# Target: 80% by end of Q2 2026
fail_under = 73
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "\\.\\.\\.",  # Ellipsis
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
# Security linting configuration
exclude_dirs = ["tests", "node_modules", ".venv", "venv", "build", "dist"]
skips = [
    "B101",  # assert_used - OK in tests
    "B104",  # hardcoded_bind_all_interfaces - OK for dev server
    "B310",  # urllib_urlopen - OK, we validate URLs before opening
    "B311",  # random - OK for non-crypto uses
]
# Target confidence level
confidence = "HIGH"
